--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": {},
   "dependencies": {
     "express": "~4.5.0",
-    "jquery": "3.0.0"
+    "jquery": ">=3.4.0"
   },
   "devDependencies": {
   },
