--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.0.1",
-    "node-sass": "^5.0.0"
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.0"
   }
 }
