--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "cssnano": "^5.0.2",
-    "postcss": "^8.2.13",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-html-minifier-terser": "^6.0.0",
     "gulp-image": "^6.2.1",
     "gulp-livereload": "^4.0.2",
@@ -30,6 +30,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.0.1",
     "lodash": "^4.17.21",
-    "node-sass": "^6.0.0"
+    "node-sass": "^6.0.0",
+    "postcss": "^8.2.13"
   }
 }
