removed html comments and added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,7 @@ debug.log
 /terms-conditions.html
 /downloads.html
 /privacy-policy.html
+/user-stories.html
 /faq.html
+user-stories.html
+user-stories/*
