MAR-3350 - Added 'User Stories' to the main nav

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ debug.log
 /faq.html
 user-stories.html
 user-stories/*
+./user-stories.html
+./user-stories/rti.html
+/user-stories.html
+/user-stories/rti.html
