user-stories.html & user-stories/*

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ debug.log
 /privacy-policy.html
 /user-stories.html
 /faq.html
-user-stories.html
-user-stories/*
+./user-stories.html
+./user-stories/*
 ./user-stories.html
 ./user-stories/rti.html
 /user-stories.html
